fix: replace Thread.currentThread().getId() with Thread.currentThread().threadId() for consistency (#2196)